[gd_scene load_steps=38 format=3 uid="uid://b5lw0ejedrvs5"]

[ext_resource type="Script" uid="uid://bvpgkd42d0apo" path="res://scenes/player/player.gd" id="1_6cv16"]
[ext_resource type="Texture2D" uid="uid://bfrv8867x61bj" path="res://Topdown Assets/Sprites/Entities/Char 1/death_0.png" id="1_007i1"]
[ext_resource type="Texture2D" uid="uid://tr485gm6nene" path="res://Topdown Assets/Sprites/Entities/Char 1/death_1.png" id="2_6cv16"]
[ext_resource type="Texture2D" uid="uid://dyng1b0t0aht8" path="res://Topdown Assets/Sprites/Entities/Char 1/death_2.png" id="3_j4nxn"]
[ext_resource type="Texture2D" uid="uid://dlo6pya3ua1oh" path="res://Topdown Assets/Sprites/Entities/Char 1/death_3.png" id="4_28m0y"]
[ext_resource type="Texture2D" uid="uid://bae4uxnyf2q2y" path="res://Topdown Assets/Sprites/Entities/Char 1/death_4.png" id="5_uniwh"]
[ext_resource type="Texture2D" uid="uid://bf5rlqqf4bnn0" path="res://Topdown Assets/Sprites/Entities/Char 1/death_5.png" id="6_iqsei"]
[ext_resource type="Texture2D" uid="uid://bo77gxtven1m1" path="res://Topdown Assets/Sprites/Entities/Char 1/death_6.png" id="7_tffgl"]
[ext_resource type="Texture2D" uid="uid://cyuykhj12qjl6" path="res://Topdown Assets/Sprites/Entities/Char 1/death_7.png" id="8_pk8ii"]
[ext_resource type="Texture2D" uid="uid://dkoahpwuo0hfi" path="res://Topdown Assets/Sprites/Entities/Char 1/death_8.png" id="9_5mf0n"]
[ext_resource type="Texture2D" uid="uid://cmjost1au5kud" path="res://Topdown Assets/Sprites/Entities/Char 1/death_9.png" id="10_4hvnv"]
[ext_resource type="Texture2D" uid="uid://bolqgxb6t1elc" path="res://Topdown Assets/Sprites/Entities/Char 1/idle_0.png" id="11_bbmj2"]
[ext_resource type="Texture2D" uid="uid://diavg55shqhx" path="res://Topdown Assets/Sprites/Entities/Char 1/idle_1.png" id="12_kxw46"]
[ext_resource type="Texture2D" uid="uid://deqe64mghomul" path="res://Topdown Assets/Sprites/Entities/Char 1/idle_2.png" id="13_8qxvo"]
[ext_resource type="Texture2D" uid="uid://de1215db5r0s8" path="res://Topdown Assets/Sprites/Entities/Char 1/idle_3.png" id="14_5q8fn"]
[ext_resource type="Texture2D" uid="uid://b30lj8i6scb5a" path="res://Topdown Assets/Sprites/Entities/Char 1/idle_4.png" id="15_wva7c"]
[ext_resource type="Texture2D" uid="uid://chq84i6thsq8w" path="res://Topdown Assets/Sprites/Entities/Char 1/idle_5.png" id="16_7obkq"]
[ext_resource type="Texture2D" uid="uid://b3e341875lleh" path="res://Topdown Assets/Sprites/Entities/Char 1/walk_0.png" id="17_vo27k"]
[ext_resource type="Texture2D" uid="uid://ddqdyjnvxsm8s" path="res://Topdown Assets/Sprites/Entities/Char 1/walk_1.png" id="18_genst"]
[ext_resource type="Texture2D" uid="uid://cm51sye7msbeh" path="res://Topdown Assets/Sprites/Entities/Char 1/walk_2.png" id="19_niom3"]
[ext_resource type="Texture2D" uid="uid://cj1dy1mvi6f21" path="res://Topdown Assets/Sprites/Entities/Char 1/walk_3.png" id="20_ttakn"]
[ext_resource type="Texture2D" uid="uid://dm6ofjq0or258" path="res://Topdown Assets/Sprites/Entities/Char 1/walk_4.png" id="21_rw8a5"]
[ext_resource type="Texture2D" uid="uid://kpw5humgslfo" path="res://Topdown Assets/Sprites/Entities/Char 1/walk_5.png" id="22_iwuka"]
[ext_resource type="Texture2D" uid="uid://dl6wf3lilmpds" path="res://Topdown Assets/Sprites/Entities/Char 1/walk_6.png" id="23_hyqqp"]
[ext_resource type="Texture2D" uid="uid://b145gvhu4ameq" path="res://Topdown Assets/Sprites/Entities/Char 1/walk_7.png" id="24_ds1xl"]
[ext_resource type="Texture2D" uid="uid://b0d6xe0sreis5" path="res://Topdown Assets/Sprites/Shadow.png" id="25_1u1sw"]
[ext_resource type="Script" uid="uid://cjt3bvjaf1qui" path="res://scenes/player/weapon.gd" id="27_28m0y"]
[ext_resource type="Texture2D" uid="uid://kgtvsn78ykg8" path="res://Topdown Assets/Sprites/Weapons/weapon_3_shotgun.png" id="28_28m0y"]
[ext_resource type="Texture2D" uid="uid://b1kuiookowv35" path="res://Topdown Assets/Sprites/Extras/muzzle.png" id="29_iqsei"]
[ext_resource type="AudioStream" uid="uid://dqndjkx5dws8j" path="res://Topdown Assets/Sound/FireSound.wav" id="30_tffgl"]
[ext_resource type="PackedScene" uid="uid://dps8qelmo2emh" path="res://scenes/components/health_component.tscn" id="31_tffgl"]
[ext_resource type="PackedScene" uid="uid://bq57dm3qfl6g3" path="res://scenes/extra/health_bar.tscn" id="32_pk8ii"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fddr8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_007i1")
}, {
"duration": 1.0,
"texture": ExtResource("2_6cv16")
}, {
"duration": 1.0,
"texture": ExtResource("3_j4nxn")
}, {
"duration": 1.0,
"texture": ExtResource("4_28m0y")
}, {
"duration": 1.0,
"texture": ExtResource("5_uniwh")
}, {
"duration": 1.0,
"texture": ExtResource("6_iqsei")
}, {
"duration": 1.0,
"texture": ExtResource("7_tffgl")
}, {
"duration": 1.0,
"texture": ExtResource("8_pk8ii")
}, {
"duration": 1.0,
"texture": ExtResource("9_5mf0n")
}, {
"duration": 1.0,
"texture": ExtResource("10_4hvnv")
}],
"loop": false,
"name": &"dead",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_bbmj2")
}, {
"duration": 1.0,
"texture": ExtResource("12_kxw46")
}, {
"duration": 1.0,
"texture": ExtResource("13_8qxvo")
}, {
"duration": 1.0,
"texture": ExtResource("14_5q8fn")
}, {
"duration": 1.0,
"texture": ExtResource("15_wva7c")
}, {
"duration": 1.0,
"texture": ExtResource("16_7obkq")
}],
"loop": true,
"name": &"idle",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_vo27k")
}, {
"duration": 1.0,
"texture": ExtResource("18_genst")
}, {
"duration": 1.0,
"texture": ExtResource("19_niom3")
}, {
"duration": 1.0,
"texture": ExtResource("20_ttakn")
}, {
"duration": 1.0,
"texture": ExtResource("21_rw8a5")
}, {
"duration": 1.0,
"texture": ExtResource("22_iwuka")
}, {
"duration": 1.0,
"texture": ExtResource("23_hyqqp")
}, {
"duration": 1.0,
"texture": ExtResource("24_ds1xl")
}],
"loop": true,
"name": &"move",
"speed": 15.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oybyf"]
radius = 136.0
height = 576.0

[sub_resource type="Animation" id="Animation_tffgl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon/WeaponSprite/Muzzle:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_iqsei"]
resource_name = "shoot"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon/WeaponSprite/Muzzle:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pk8ii"]
_data = {
&"RESET": SubResource("Animation_tffgl"),
&"shoot": SubResource("Animation_iqsei")
}

[node name="Player" type="CharacterBody2D"]
scale = Vector2(0.25, 0.25)
collision_layer = 2
script = ExtResource("1_6cv16")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-5, -760)
sprite_frames = SubResource("SpriteFrames_fddr8")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -292)
shape = SubResource("CapsuleShape2D_oybyf")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.313726)
texture = ExtResource("25_1u1sw")

[node name="Weapon" type="Node2D" parent="."]
visible = false
position = Vector2(0, -144)
script = ExtResource("27_28m0y")

[node name="WeaponSprite" type="Sprite2D" parent="Weapon"]
position = Vector2(348, -32)
scale = Vector2(1.5, 1.5)
texture = ExtResource("28_28m0y")

[node name="FirePos" type="Marker2D" parent="Weapon/WeaponSprite"]
unique_name_in_owner = true
position = Vector2(349.333, -77.3333)
scale = Vector2(0.666667, 0.666667)

[node name="Muzzle" type="Sprite2D" parent="Weapon/WeaponSprite"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
position = Vector2(432, -72)
scale = Vector2(0.12, 0.12)
texture = ExtResource("29_iqsei")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_pk8ii")
}

[node name="FireSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("30_tffgl")
volume_db = 1.0
bus = &"SFX"

[node name="HealthComponent" parent="." instance=ExtResource("31_tffgl")]

[node name="HealthBar" parent="." instance=ExtResource("32_pk8ii")]
offset_left = -212.0
offset_top = -824.0
offset_right = -212.0
offset_bottom = -824.0
scale = Vector2(3, 3)

[connection signal="on_damaged" from="HealthComponent" to="." method="_on_health_component_on_damaged"]
[connection signal="on_defeated" from="HealthComponent" to="." method="_on_health_component_on_defeated"]
